Fixed bar white space

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 #root {
-  width: 100%;
+  width: 100vw;
   position: absolute;
   top: 0;
+  left: 0;
   text-align: center;
-  height: 100%;
+  height: 100vh;
 }
 
 .logo {
